--- a/src/application/InPage.fxml
+++ b/src/application/InPage.fxml
@@ -41,11 +41,12 @@
                   <Font name="Malgun Gothic Bold" size="36.0" />
                </font>
             </Label>
-            <Label fx:id="label_clock" layoutX="420.0" layoutY="25.0">
+            <Label fx:id="label_clock" layoutX="440.0" layoutY="25.0">
                <font>
                   <Font name="MS Gothic" size="24.0" />
                </font>
             </Label>
+            <Button fx:id="button_writeTest" layoutX="49.0" layoutY="88.0" mnemonicParsing="false" onAction="#writeTest" text="書き込みテスト" />
          </children>
       </Pane>
    </top>
