--- a/src/application/TopPage.fxml
+++ b/src/application/TopPage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application.C3BIOSController">
+<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.C3BIOSController">
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -15,7 +15,7 @@
                   <Font name="MS Gothic" size="28.0" />
                </font>
             </Label>
-            <Label fx:id="label_IDm" layoutX="190.0" layoutY="49.0" text="00 00 00 00 00 00 00 00">
+            <Label fx:id="label_IDm" layoutX="190.0" layoutY="49.0">
                <font>
                   <Font name="MS Gothic" size="28.0" />
                </font>
