remove: CSV書き込みテストボタンを削除
C3BIOSController.java#53 入室ボタンクリック時にCSVに書き込むようにしたため削除．

--- a/bin/application/InPage.fxml
+++ b/bin/application/InPage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application.C3BIOSController">
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.C3BIOSController">
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -46,7 +46,6 @@
                   <Font name="MS Gothic" size="24.0" />
                </font>
             </Label>
-            <Button fx:id="button_writeTest" layoutX="49.0" layoutY="88.0" mnemonicParsing="false" onAction="#writeTest" text="書き込みテスト" />
          </children>
       </Pane>
    </top>
