add: エラーウィンドウ表示時，ボタンクリックでウィンドウを閉じる機能を追加
C3BIOSController.java#61 「読み直す」ボタンクリックでウィンドウを閉じるようにした

--- a/bin/application/InPage.fxml
+++ b/bin/application/InPage.fxml
@@ -46,6 +46,7 @@
                   <Font name="MS Gothic" size="24.0" />
                </font>
             </Label>
+            <Label fx:id="label_message" disable="true" text="NPE回避用のラベル" visible="false" />
          </children>
       </Pane>
    </top>
