--- a/bin/application/ErrorPage.fxml
+++ b/bin/application/ErrorPage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application.C3BIOSController">
    <top>
       <Pane prefHeight="100.0" prefWidth="400.0" BorderPane.alignment="CENTER">
          <children>
@@ -15,18 +15,21 @@
                   <Font name="System Bold" size="36.0" />
                </font>
             </Label>
+            <Label fx:id="label_clock" disable="true" text="NPE回避用のラベル(clock)" visible="false" />
+            <Label fx:id="label_message" disable="true" text="NPE回避用のラベル(message)" visible="false" />
+            <Label fx:id="label_IDm" disable="true" text="NPE回避用ラベル(IDm)" visible="false" />
          </children>
       </Pane>
    </top>
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="44.0" layoutY="194.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" text="読み取り直す">
+            <Button fx:id="button_reread" layoutX="44.0" layoutY="194.0" mnemonicParsing="false" onAction="#onRereadButtonClick" prefHeight="40.0" prefWidth="200.0" text="読み取り直す">
                <font>
                   <Font name="MS Gothic" size="24.0" />
                </font>
             </Button>
-            <Label alignment="TOP_CENTER" layoutX="44.0" layoutY="41.0" prefHeight="97.0" prefWidth="412.0" text="そのIDは登録されていません．&#10;登録されているカードを読み込むか，&#10;名前を入力してください．">
+            <Label alignment="TOP_CENTER" layoutX="44.0" layoutY="43.0" prefHeight="97.0" prefWidth="412.0" text="そのIDは登録されていません．&#10;登録されているカードを読み込むか，&#10;名前を入力してください．">
                <font>
                   <Font name="MS Gothic" size="24.0" />
                </font>
