--- a/bin/application/InPage.fxml
+++ b/bin/application/InPage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application.C3BIOSController">
+<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application.InPageController">
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -46,7 +46,6 @@
                   <Font name="MS Gothic" size="24.0" />
                </font>
             </Label>
-            <Label fx:id="label_message" disable="true" text="NPE回避用のラベル" visible="false" />
          </children>
       </Pane>
    </top>
