--- a/bin/application/InputNamePage.fxml
+++ b/bin/application/InputNamePage.fxml
@@ -27,7 +27,7 @@
                   <Font name="MS Gothic" size="24.0" />
                </font>
             </TextField>
-            <Label layoutX="58.0" layoutY="40.0" text="スキャンしたIDと入力された名前で&#10;今回のみ入室します．&#10;毎回名前を入力するのが面倒な人は&#10;別途登録してね！">
+            <Label layoutX="58.0" layoutY="40.0" text="スキャンしたIDと入力された名前で&#10;今回のみ入室します．">
                <font>
                   <Font name="MS Gothic" size="24.0" />
                </font>
@@ -37,6 +37,11 @@
                   <Font name="MS Gothic" size="24.0" />
                </font>
             </Button>
+            <Label fx:id="label_warning" alignment="CENTER" layoutX="64.0" layoutY="137.0" prefHeight="30.0" prefWidth="380.0" textFill="RED">
+               <font>
+                  <Font name="MS Gothic" size="24.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
    </center>
