--- a/src/application/TopPage.fxml
+++ b/src/application/TopPage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application.TopPageController">
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.TopPageController">
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -25,7 +25,7 @@
                   <Font name="MS Gothic" size="28.0" />
                </font>
             </Label>
-            <Label layoutX="190.0" layoutY="112.0" text="ほげほげトップページ太郎">
+            <Label fx:id="label_username" layoutX="190.0" layoutY="112.0">
                <font>
                   <Font name="MS Gothic" size="28.0" />
                </font>
