--- a/src/application/InPage.fxml
+++ b/src/application/InPage.fxml
@@ -25,7 +25,7 @@
                   <Font name="MS Gothic" size="28.0" />
                </font>
             </Label>
-            <Label layoutX="190.0" layoutY="112.0" text="ほげほげ入室太郎">
+            <Label fx:id="label_username" layoutX="190.0" layoutY="112.0">
                <font>
                   <Font name="MS Gothic" size="28.0" />
                </font>
