add: 履歴ウィンドウにcsvの内容をそのまま表示する機能追加
Main.java#108 そのままと書いたがIDmは表示しない

--- a/bin/application/HistoryPage.fxml
+++ b/bin/application/HistoryPage.fxml
@@ -32,137 +32,9 @@
       </Pane>
    </center>
    <left>
-      <ScrollPane hbarPolicy="NEVER" prefHeight="520.0" prefWidth="500.0" vbarPolicy="ALWAYS" BorderPane.alignment="CENTER">
+      <ScrollPane prefHeight="520.0" prefWidth="500.0" vbarPolicy="ALWAYS" BorderPane.alignment="CENTER">
          <content>
-            <VBox prefWidth="500.0">
-               <children>
-                  <Label text="182C1000, 20/03/10, 12:00">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C2000, 20/03/11, 08:00">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 11:11">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 11:00">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 00:11">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 12:34">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C1234, 20/03/11, 11:00">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 11:11">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 11:11">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 11:11">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 12:34">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C1000, 20/03/10, 12:00">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C2000, 20/03/11, 08:00">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 11:00">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 11:11">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C1234, 20/03/11, 11:00">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 12:34">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 11:00">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C1000, 20/03/10, 12:00">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C2000, 20/03/11, 08:00">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 11:11">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 11:00">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 00:11">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C3000, 20/03/11, 12:34">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="182C1234, 20/03/11, 11:00">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-               </children>
-            </VBox>
+            <VBox fx:id="vbox_history" />
          </content>
       </ScrollPane>
    </left>
